pom-parser/src/snapshots/call.snap
---
source: pom-parser/src/tests.rs
expression: "lex_and_parse(\"f();\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(1),
                    ),
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Call {
                        callable: Id<Expr>(0),
                        args: [],
                    },
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                },
            ],
        ),
    },
    Arena(
        [],
    ),
)
