pom-parser/src/snapshots/empty-2.snap
---
source: pom-parser/src/tests.rs
expression: "lex_and_parse(\";\")"
---
(
    Ast {
        items: [],
        stmts: Arena(
            [],
        ),
        exprs: Arena(
            [],
        ),
    },
    [
        Error {
            kind: UnexpectedToken {
                wanted: [
                    Bool,
                    Float,
                    Ident,
                    Int,
                    LBrace,
                    LParen,
                ],
                got: Token {
                    kind: Semicolon,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
            },
            span: Span {
                start: 0,
                end: 1,
            },
        },
    ],
)
