pom-parser/src/snapshots/invalid_bind_fn-3.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"f: fn (a = 55;\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(0),
                            kind: Fn {
                                params: [
                                    Bind {
                                        lhs: Id<Expr>(1),
                                        kind: Infer,
                                        rhs: Some(
                                            Id<Expr>(2),
                                        ),
                                    },
                                ],
                            },
                            rhs: Some(
                                Id<Expr>(3),
                            ),
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 14,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 7,
                        end: 8,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 11,
                        end: 13,
                    },
                },
                Expr {
                    kind: Invalid(
                        Id<Error>(2),
                    ),
                    span: Span {
                        start: 0,
                        end: 14,
                    },
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Colon,
                    ],
                    got: Token {
                        kind: Equal,
                        span: Span {
                            start: 9,
                            end: 10,
                        },
                    },
                },
                span: Span {
                    start: 7,
                    end: 8,
                },
            },
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Comma,
                        RParen,
                    ],
                    got: Token {
                        kind: Semicolon,
                        span: Span {
                            start: 13,
                            end: 14,
                        },
                    },
                },
                span: Span {
                    start: 6,
                    end: 13,
                },
            },
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Equal,
                        Semicolon,
                    ],
                    got: Token {
                        kind: Eof,
                        span: Span {
                            start: 4294967295,
                            end: 4294967295,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 14,
                },
            },
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Semicolon,
                    ],
                    got: Token {
                        kind: Eof,
                        span: Span {
                            start: 4294967295,
                            end: 4294967295,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 14,
                },
            },
        ],
    ),
)
