pom-parser/src/snapshots/invalid_bind_fn-4.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"f: fn (x) = x;\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(0),
                            kind: Fn {
                                params: [
                                    Bind {
                                        lhs: Id<Expr>(1),
                                        kind: Invalid(
                                            Id<Error>(1),
                                        ),
                                        rhs: None,
                                    },
                                ],
                            },
                            rhs: Some(
                                Id<Expr>(2),
                            ),
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 14,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 7,
                        end: 8,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 12,
                        end: 13,
                    },
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Colon,
                    ],
                    got: Token {
                        kind: RParen,
                        span: Span {
                            start: 8,
                            end: 9,
                        },
                    },
                },
                span: Span {
                    start: 7,
                    end: 8,
                },
            },
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Fn,
                        Type,
                        Ident,
                    ],
                    got: Token {
                        kind: RParen,
                        span: Span {
                            start: 8,
                            end: 9,
                        },
                    },
                },
                span: Span {
                    start: 7,
                    end: 8,
                },
            },
        ],
    ),
)
