pom-parser/src/snapshots/invalid_bind_fn-5.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"f: fn (x = 55) = x;\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(0),
                            kind: Fn {
                                params: [
                                    Bind {
                                        lhs: Id<Expr>(1),
                                        kind: Infer,
                                        rhs: Some(
                                            Id<Expr>(2),
                                        ),
                                    },
                                ],
                            },
                            rhs: Some(
                                Id<Expr>(3),
                            ),
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 19,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 7,
                        end: 8,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 11,
                        end: 13,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 17,
                        end: 18,
                    },
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Colon,
                    ],
                    got: Token {
                        kind: Equal,
                        span: Span {
                            start: 9,
                            end: 10,
                        },
                    },
                },
                span: Span {
                    start: 7,
                    end: 8,
                },
            },
        ],
    ),
)
