pom-parser/src/snapshots/invalid_bind_fn.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"f: fn (a: i32) = ;\")"
---
(
    Ast {
        items: [
            Id<Stmt>(0),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            lhs: Id<Expr>(0),
                            kind: Fn {
                                params: [
                                    Bind {
                                        lhs: Id<Expr>(1),
                                        kind: Expr(
                                            Id<Expr>(2),
                                        ),
                                        rhs: None,
                                    },
                                ],
                            },
                            rhs: Some(
                                Id<Expr>(3),
                            ),
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 18,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 7,
                        end: 8,
                    },
                },
                Expr {
                    kind: Ident,
                    span: Span {
                        start: 10,
                        end: 13,
                    },
                },
                Expr {
                    kind: Invalid(
                        Id<Error>(0),
                    ),
                    span: Span {
                        start: 17,
                        end: 18,
                    },
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Bool,
                        Float,
                        Ident,
                        Int,
                        LBrace,
                        LParen,
                    ],
                    got: Token {
                        kind: Semicolon,
                        span: Span {
                            start: 17,
                            end: 18,
                        },
                    },
                },
                span: Span {
                    start: 15,
                    end: 16,
                },
            },
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Semicolon,
                    ],
                    got: Token {
                        kind: Eof,
                        span: Span {
                            start: 4294967295,
                            end: 4294967295,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 18,
                },
            },
        ],
    ),
)
