pom-parser/src/snapshots/invalid_block_stmt-4.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"{;}\")"
---
(
    Ast {
        items: [
            Id<Stmt>(1),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(0),
                    ),
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
                Stmt {
                    kind: Block(
                        [
                            Id<Stmt>(0),
                        ],
                    ),
                    span: Span {
                        start: 0,
                        end: 3,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Invalid(
                        Id<Error>(0),
                    ),
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Bool,
                        Float,
                        Ident,
                        Int,
                        LBrace,
                        LParen,
                    ],
                    got: Token {
                        kind: Semicolon,
                        span: Span {
                            start: 1,
                            end: 2,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
        ],
    ),
)
