pom-parser/src/snapshots/invalid_block_stmt-6.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"{\")"
---
(
    Ast {
        items: [
            Id<Stmt>(1),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Block(
                        [],
                    ),
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
            ],
        ),
        exprs: Arena(
            [],
        ),
    },
    Arena(
        [
            Error {
                kind: UnbalancedBlock,
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
        ],
    ),
)
