pom-parser/src/snapshots/invalid_block_stmt-7.snap
---
source: pom-parser/src/tests.rs
expression: "test(\"{; 1 + 1;}\")"
---
(
    Ast {
        items: [
            Id<Stmt>(2),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Expr(
                        Id<Expr>(0),
                    ),
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
                Stmt {
                    kind: Expr(
                        Id<Expr>(3),
                    ),
                    span: Span {
                        start: 3,
                        end: 9,
                    },
                },
                Stmt {
                    kind: Block(
                        [
                            Id<Stmt>(0),
                            Id<Stmt>(1),
                        ],
                    ),
                    span: Span {
                        start: 0,
                        end: 10,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Invalid(
                        Id<Error>(0),
                    ),
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            1,
                        ),
                    ),
                    span: Span {
                        start: 3,
                        end: 4,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            1,
                        ),
                    ),
                    span: Span {
                        start: 7,
                        end: 8,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(1),
                        op: Add,
                        rhs: Id<Expr>(2),
                    },
                    span: Span {
                        start: 3,
                        end: 8,
                    },
                },
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnexpectedToken {
                    wanted: [
                        Bool,
                        Float,
                        Ident,
                        Int,
                        LBrace,
                        LParen,
                    ],
                    got: Token {
                        kind: Semicolon,
                        span: Span {
                            start: 1,
                            end: 2,
                        },
                    },
                },
                span: Span {
                    start: 0,
                    end: 1,
                },
            },
        ],
    ),
)
